Remove names from Jonosija